--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div><a href="./pages/desafio4.html">Desafio 4</a></div>
         <div><a href="./pages/desafio4c.html">Desafio 4 (complementario)</a></div>
         <div><a href="./pages/desafio5.html">Desafio 5</a></div>
+        <div><a href="./pages/desafio6.html">Desafio 6</a></div>
     </main>
     <footer>
         <h3>Autor: Agustin Jose Perez Rodriguez</h3>
