--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div><a href="./pages/desafio4c.html">Desafio 4 (complementario)</a></div>
         <div><a href="./pages/desafio5.html">Desafio 5</a></div>
         <div><a href="./pages/desafio6.html">Desafio 6</a></div>
+        <div><a href="./pages/desafio6c.html">Desafio 6 (complementario)</a></div>
     </main>
     <footer>
         <h3>Autor: Agustin Jose Perez Rodriguez</h3>
