--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div><a href="./pages/desafio6.html">Desafio 6</a></div>
         <div><a href="./pages/desafio6c.html">Desafio 6 (complementario)</a></div>
         <div><a href="./pages/pre-entrega1.html">Primera Pre-entrega</a></div>
+        <div><a href="./pages/desafio9.html">Desafio 9</a></div>
     </main>
     <footer>
         <h3>Autor: Agustin Jose Perez Rodriguez</h3>
